<resources>
    <string name="app_name" translatable="false">VayH</string>
    <string name="loading">loading…</string>
    <string name="net_error">Please check if your network status is good</string>
    <string name="welcome_to_app">Welcome to %1$s</string>
    <string name="permissions">Permissions</string>
    <string name="permission_desc">Dear Customer,\nIn order to process and disburse your loan quickly, we need to collect certain permissions, including access to your LOCATION, CAMERA, PHONE STATE, NOTIFICATIONS, INSTALLED APPLICATIONS, SMS MESSAGES, and CALL LOGS.\nPlease grant the necessary permissions as specified below.</string>
    <string name="permission_call_title">COLLECTION OF CALL RECORDS</string>
    <string name="permission_call_content">In order to ensure that real users use the app in a normal environment, rather than using a simulator for fraudulent behavior, we need to obtain your call records, including phone number, name, and call time. The call records information will be uploaded to %s and will not be shared with third parties.</string>
    <string name="permission_sms_title">SMS</string>
    <string name="permission_sms_content">We collect all your SMS data but only monitor your messages related to financial transactions. To be specific, we will monitor the name of the sender, the description and the amount of transaction to perform credit risk assessment. This enables faster and quicker loan disbursal. No personal SMS data is monitored, read, stored or shared.</string>
    <string name="permissions_notification_title">NOTIFICATION</string>
    <string name="permissions_notification_content">Turn on message notifications to receive loan order progress notifications and service messages as soon as possible to avoid missing important information and help improve your user experience.Please read carefully and agree to the following agreement in order to use the APP.</string>
    <string name="permission_location_title">LOCATION</string>
    <string name="permission_location_content">User location helps to locate and verify the address which helps in making better credit risk decisions and fasten the Know Your Customer(KYC) process.</string>
    <string name="permission_camera_title">CAMERA</string>
    <string name="permission_camera_content">Camera access is required so that user can easily scan or capture identity documents etc. and save time by allowing us to auto-fill the required data and helps in improving the user journey and experience.</string>
    <string name="permission_phone_title">PHONE STATE</string>
    <string name="permission_phone_content">Like your phone’s unique device identifier, as this information helps us in uniquely identifying a user, so that we can detect and prevent any unauthorized device from acting on your behalf. This enables us to detect fraud and manage risks better.</string>
    <string name="permission_installed_title">INSTALLED APPLICATIONS</string>
    <string name="permission_installed_content">We will get a list of installed applications data information, including application name, package name, installation time update time, version name and version code of each installed application on the device to evaluate your credit value and enrich your personal data with pre approved custom loan offers.</string>
    <string name="permission_calendar_title">COLLECTION OF CALENDAR</string>
    <string name="permission_calendar_content">In order to improve your experience, we would like to access your calendar. This will help us automatically add repayment reminders and important loan dates for you, ensuring that you don’t miss any important information. We take your privacy very seriously and promise to use this data only with your consent and not for other purposes.</string>
    <string name="reject">Reject</string>
    <string name="agree">Agree</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_agree1">l agree Information Collection And Use Rules</string>
    <string name="privacy_agree2">I agree Privacy Policy and Terms and Conditions</string>
    <string name="privacy_agree1_blue">Information Collection And Use Rules</string>
    <string name="privacy_agree2_blue">Terms and Conditions</string>
    <string name="privacy_toast_agree1">Please consent to the Information Collection and Use Rules.</string>
    <string name="privacy_toast_agree2">Please consent to the Privacy Policy and Terms and Conditions.</string>
    <string name="home">Home</string>
    <string name="order">order</string>
    <string name="stats">Stats</string>
    <string name="plan">Plan</string>
    <string name="mine">Mine</string>
    <string name="again_exit">Press again to exit the app.</string>
    <string name="login_sub">Register and log in, simple information, fast review, fast payment.</string>
    <string name="otp_login">OTP Login</string>
    <string name="password_login">Password Login</string>
    <string name="login_desc">Your financial emergency expert</string>
    <string name="photo_number">Photo number</string>
    <string name="otp_enter">Enter OTP</string>
    <string name="password">Password</string>
    <string name="accept_policy">By signing up, l accept %s and %s</string>
    <string name="privacy_agreement">Privacy Agreement</string>
    <string name="privacy_blue">Privacy Policy</string>
    <string name="get_str">Get</string>
    <string name="retry">Retry</string>
    <string name="login_tip">We will send you a confirmation code via SMS or voice call.</string>
    <string name="login">Login</string>
    <string name="please_check_phone">Please enter a valid phone number</string>
    <string name="please_check_otp">Please check if the OTP input is correct.</string>
    <string name="who_are_we_title">Formal compliance financial qualifications</string>
    <string name="sure_logout">Are you sure you want to log out of the app?</string>
    <string name="new_version">New version</string>
    <string name="new_version_desc">The version is too low, please update</string>
    <string name="update">Update</string>
    <string name="under_18">You are under 18 years old.</string>
    <string name="id_number_error">The ID card number is incorrect.</string>
    <string name="dialog_permission_title">Please enable [%s] permission in the settings to continue using the app!</string>
    <string name="dialog_permission_phone">phone</string>
    <string name="dialog_permission_calendar">calendar</string>
    <string name="dialog_permission_call">call log</string>
    <string name="dialog_permission_location">location</string>
    <string name="dialog_permission_sms">Sms</string>
    <string name="dialog_permission_notification">Notification</string>
    <string name="please_sign">Please sign.</string>
    <string name="camera_str">Camera</string>
    <string name="create_a_password">Create a password</string>
    <string name="create_password_tips">Please create a password that you can use the next time you log in</string>
    <string name="next">Next</string>
    <string name="set_password">Set password</string>
    <string name="set_password_tips">For your convenience next time you log in, we recommend that you set a password.</string>
    <string name="setup">Setup</string>
    <string name="skip">Skip</string>
    <string name="password_not_match">The passwords do not match.</string>
    <string name="password_not_empty">Password cannot be empty.</string>
    <string name="password_set_successful">Password set successfully！</string>
    <string name="password_set_successful_tips">Your password has been set successfully and you can log in normally</string>
    <string name="ok">OK</string>
    <string name="complete">Complete</string>
    <string name="closed">Closed</string>
    <string name="sure">Sure</string>
    <string name="password_change_successful">Password change successfully！</string>
    <string name="welcome_str">Welcome,</string>
    <string name="certification">Certification</string>
    <string name="order_center">Order Center</string>
    <string name="accounts">Accounts</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="account_number">Account number</string>
    <string name="repayment_success">Repayment successful!</string>
    <string name="loan_result">Good repayment habits can improve your credit score, increase the amount you borrow, and increase your borrowing limit</string>
    <string name="bank_account">Bank Account</string>
    <string name="confirm_bank_account">Re-enter bank account</string>
    <string name="withdraw_method">Withdraw method</string>
    <string name="please_select">Please select</string>
    <string name="select_withdraw_method">Select withdraw method</string>
    <string name="first_name">First name</string>
    <string name="confirm_account_number">Confirm account number</string>
    <string name="please_choose_wallet">Please choose an E-Wallet</string>
    <string name="please_enter_wallet_account">Please enter the account number</string>
    <string name="wallet_account_not_match">The account numbers do not match.</string>
    <string name="cardholder_name">Cardholder\'s name</string>
    <string name="please_choose_bank">Please choose a bank</string>
    <string name="please_enter_holder_name">Please enter the Cardholder\'s name</string>
    <string name="please_enter_bank_account">Please enter the bank account</string>
    <string name="bank_account_not_match">The bank account do not match.</string>
    <string name="back_to_home">Back to Homepage</string>
    <string name="back_to_home_tips">Automatically jump to the homepage after %ss</string>
    <string name="personal_info">Personal information</string>
    <string name="name">Name</string>
    <string name="id_card_number">Identity card number</string>
    <string name="please_enter_current_info">Please enter the correct information</string>
    <string name="please_choose_current_info">Please choose the correct information</string>
    <string name="gender">Gender</string>
    <string name="please_choose">please choose</string>
    <string name="please_enter">Please enter</string>
    <string name="please_enter_name">Please enter the name</string>
    <string name="please_enter_id_card">Please enter your ID number</string>
    <string name="monthly_salary">Monthly salary</string>
    <string name="please_enter_monthly">please enter the monthly salary</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="education">Education</string>
    <string name="marry_status">Marital status</string>
    <string name="province_city_town">Province/City/Town</string>
    <string name="residential_address_hint">Please enter your detailed address</string>
    <string name="bank_tips">Please fill in the correct bank account of your chosen bank, bank mismatch or account error will cause the loan to fail.</string>
    <string name="detail_address">Detailed address</string>
    <string name="zalo">Zalo</string>
    <string name="please_enter_zalo">Please enter your Zalo account</string>
    <string name="repayment_success_tips">We will check your repayment status and end your order after confirming the repayment</string>
    <string name="portal_target_amount"><font color="#F62909">*</font>How much would you like to save?</string>
    <string name="portal_saving_frequency"><font color="#F62909">*</font>How often can you save?</string>
    <string name="portal_each_saving_amount"><font color="#F62909">*</font>How much can you save each time?</string>
    <string name="portal_please_enter_target_amount">Please enter your savings target</string>
    <string name="portal_please_choose_frequency">Please choose how often you can save</string>
    <string name="portal_please_enter_each_amount">Please enter how much you can save each time</string>
</resources>