<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isCertified"
            type="Boolean" />

        <variable
            name="showBankFields"
            type="Boolean" />

        <variable
            name="showWalletFields"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center_vertical"
        android:text="@string/withdraw_method"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/bank_tips"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/sp_12" />

    <com.vaycore.finance.ui.views.StyledLinearLayout
        android:id="@+id/withdrawMethodCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:orientation="vertical"
        app:radius="@dimen/dp_12"
        app:solidColor="@color/text_inverse">

        <com.vaycore.finance.ui.views.StyledTextView
            android:id="@+id/methodSelectionView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:clickable="true"
            android:drawablePadding="@dimen/dp_12"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/dp_16"
            android:text="@string/please_select"
            android:textColor="@color/text_body"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvWithdrawMethodError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/select_withdraw_method"
            android:textColor="@color/status_error"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/bankFieldsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{showBankFields ? View.VISIBLE : View.GONE}">

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/bankView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/please_choose_current_info"
                app:formType="select"
                app:hintText="@string/please_choose"
                app:titleText="@string/please_choose_bank" />

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/holderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/please_enter_holder_name"
                app:formType="input"
                app:hintText="@string/please_enter_holder_name"
                app:inputType="text"
                app:titleText="@string/cardholder_name" />

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/bankAccountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/please_enter_bank_account"
                app:formType="input"
                app:hintText="@string/please_enter_bank_account"
                app:inputType="number"
                app:titleText="@string/bank_account" />

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/confirmBankView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/bank_account_not_match"
                app:formType="input"
                app:hintText="@string/please_enter_bank_account"
                app:inputType="number"
                app:titleText="@string/confirm_bank_account" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_18" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/walletFieldsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{showWalletFields ? View.VISIBLE : View.GONE}">

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/walletProviderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/please_choose_wallet"
                app:formType="select"
                app:hintText="@string/please_choose"
                app:titleText="@string/first_name" />

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/walletAccountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/please_enter_wallet_account"
                app:formType="input"
                app:hintText="@string/please_enter_wallet_account"
                app:inputType="number"
                app:titleText="@string/account_number" />

            <com.vaycore.finance.ui.views.FormItemView
                android:id="@+id/confirmWalletAccountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText="@string/wallet_account_not_match"
                app:formType="input"
                app:hintText="@string/please_enter_wallet_account"
                app:inputType="number"
                app:titleText="@string/confirm_account_number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_18" />
        </LinearLayout>
    </com.vaycore.finance.ui.views.StyledLinearLayout>
    </LinearLayout>
</layout>
