<?xml version="1.0" encoding="utf-8"?>
<com.vaycore.finance.ui.views.StyledConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SuccessPageRoot">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSuccess"
        style="@style/SuccessPageImage"
        android:src="@mipmap/ic_repay_success" />

    <com.vaycore.finance.ui.views.StyledConstraintLayout
        android:id="@+id/contentPanel"
        style="@style/SuccessPageContentPanel">

        <com.vaycore.finance.ui.views.StyledConstraintLayout
            android:id="@+id/successCard"
            style="@style/SuccessPageCard">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/SuccessPageTwoLineTitle"
                android:text="@string/repayment_success" />

            <TextView
                android:id="@+id/tvSubtitle"
                style="@style/SuccessPageSubtitle"
                android:text="@string/repayment_success_tips" />

        </com.vaycore.finance.ui.views.StyledConstraintLayout>

        <TextView
            android:id="@+id/tvHabitTips"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_28"
            android:gravity="center"
            android:text="@string/loan_result"
            android:textColor="@color/C_9CA3AF"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/successCard" />

    </com.vaycore.finance.ui.views.StyledConstraintLayout>

    <com.vaycore.finance.ui.views.StyledConstraintLayout
        android:id="@+id/bottomActionPanel"
        style="@style/SuccessPageBottomActionPanel">

        <TextView
            android:id="@+id/tvTips"
            style="@style/SuccessPageCountdownText"
            android:text="@string/back_to_home_tips" />

        <com.vaycore.finance.ui.widget.ActionButtonView
            android:id="@+id/tvOK"
            style="@style/SuccessPageActionButton"
            android:text="@string/back_to_home" />

    </com.vaycore.finance.ui.views.StyledConstraintLayout>

</com.vaycore.finance.ui.views.StyledConstraintLayout>
